# routes/api.php
@@ -19,7 +19,6 @@ use App\Http\Controllers\API\AdminStatsController;
 use App\Http\Controllers\API\ExportController;
 use App\Http\Controllers\API\UserController;
 use App\Http\Controllers\API\RoleDocumentationController;
-use App\Http\Controllers\API\GlobalSearchController;
 
 /*
 |--------------------------------------------------------------------------
@@ -37,21 +36,6 @@ Route::post('/login', [AuthController::class, 'login']);
 
 // Role Documentation Route (Public)
 Route::get('/roles/documentation', [RoleDocumentationController::class, 'documentation']);
-
-// Global Search Route (Public)
-Route::get('/search', GlobalSearchController::class);
-
-Route::middleware('auth:sanctum')->group(function () {
-    // User profile routes
-    Route::get('/me', [AuthController::class, 'me']);
-    Route::put('/me', [AuthController::class, 'update']);
-    Route::post('/logout', [AuthController::class, 'logout']);
-
-    // Search history routes
-    Route::get('/me/searches', [SearchHistoryController::class, 'index']);
-    Route::post('/me/searches', [SearchHistoryController::class, 'store']);
-    Route::delete('/me/searches/{search}', [SearchHistoryController::class, 'destroy']);
-});
 
 // Public Category Routes
 Route::get('/categories', [CategoryController::class, 'index']);
